[Issue #283] Fixed the Menubar position so it doesn't overlap the sidebar.

--- a/web-frontend/src/styles.scss
+++ b/web-frontend/src/styles.scss
@@ -4,6 +4,10 @@
 
 /* displaying a comic cover and its overlay details */
 
+.ui-sidebar {
+  margin-top: 44px;
+}
+
 .comic-card-cover, .comic-cover-overlay {
   border-radius: 5px;
 }
